--- a/TradingMaster/app.config
+++ b/TradingMaster/app.config
@@ -4,7 +4,9 @@
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="TradingMaster.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
     </configSections>
+
     <userSettings>
         <TradingMaster.Properties.Settings>
             <setting name="ConfirmBeforeSendNewOrder" serializeAs="String">
@@ -33,4 +35,55 @@
             </setting>
         </TradingMaster.Properties.Settings>
     </userSettings>
+
+
+  <log4net>
+     <appender  name="LogInfoAppender" type="log4net.Appender.RollingFileAppender,log4net" >
+      <param name="File" value="./Log/Info" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="'.'yyyy-MM-dd'.log'" />
+      <param name="StaticLogFileName" value="false" />
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="Header" value="&#13;&#10;----------------------  header  --------------------------&#13;&#10;" />
+        <param name="Footer" value="&#13;&#10;----------------------  footer  --------------------------&#13;&#10;" />
+      </layout>
+    </appender> 
+      
+    <appender name="DebugAppender" type="log4net.Appender.ConsoleAppender">
+      <file value="./Log/Debug.log"></file>
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="Header" value="&#13;&#10;----------------------  header  --------------------------&#13;&#10;" />
+        <param name="Footer" value="&#13;&#10;----------------------  footer  --------------------------&#13;&#10;" />
+      </layout>
+    </appender>
+    
+    <appender  name="ErrorAppender" type="log4net.Appender.RollingFileAppender,log4net" >
+      <param name="File" value="./Log/Error" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Date" />
+      <param name="DatePattern" value="'.'yyyy-MM-dd'.log'" />
+      <param name="StaticLogFileName" value="true" />
+      <layout type="log4net.Layout.PatternLayout,log4net">
+        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="Header" value="&#13;&#10;----------------------  header  --------------------------&#13;&#10;" />
+        <param name="Footer" value="&#13;&#10;----------------------  footer  --------------------------&#13;&#10;" />
+      </layout>
+    </appender> 
+    
+    <root>
+      <level value="INFO"></level>
+      <appender-ref ref="LogInfoAppender"></appender-ref>
+    </root>
+    <logger name="DebugLogger">
+      <level value="DEBUG"></level>
+      <appender-ref ref="DebugAppender"></appender-ref>
+    </logger>
+    <logger name="ErrorLogger">
+      <level value="ERROR"></level>
+      <appender-ref ref="ErrorAppender"></appender-ref>
+    </logger>
+  </log4net>
 </configuration>
