--- a/CtpTraderApi/ctp_trade_proxy.vcxproj
+++ b/CtpTraderApi/ctp_trade_proxy.vcxproj
@@ -15,6 +15,7 @@
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>ctp_trade_proxy</RootNamespace>
     <ProjectName>CtpTraderApi</ProjectName>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
