log4net.2.0.8 Update & Error log re-format

--- a/TradingMaster/app.config
+++ b/TradingMaster/app.config
@@ -59,19 +59,56 @@
         <param name="Footer" value="&#13;&#10;----------------------  footer  --------------------------&#13;&#10;" />
       </layout>
     </appender>
-    
-    <appender  name="ErrorAppender" type="log4net.Appender.RollingFileAppender,log4net" >
+
+    <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+      <!-- 设置不同级别控制台显示的不同颜色 -->
+      <mapping>
+        <level value="INFO"/>
+        <foreColor value="White"/>
+      </mapping>
+      <mapping>
+        <level value="ERROR"/>
+        <foreColor value="Yellow, HighIntensity"/>
+      </mapping>
+      <!-- 记录的格式。 -->
+      <layout type="log4net.Layout.PatternLayout">
+        <!-- 
+        <conversionPattern value="%date{HH:mm:ss,fff} [%-5level] %m %n" />
+        -->
+        <conversionPattern value="%d [%t] %-5p %c - %m%n"/>
+      </layout>
+      <!-- 
+      过滤器type有如下几种类型
+      log4net.Filter.DenyAllFilter        丢弃所有日志事件。
+      log4net.Filter.LevelMatchFilter      准确匹配事件等级。
+      log4net.Filter.LevelRangeFilter      匹配一个范围的等级。
+      log4net.Filter.LoggerMatchFilter    匹配一个日志器名字的开始。
+      log4net.Filter.PropertyFilter        匹配指定属性名称的子字符串。
+      log4net.Filter.StringMatchFilter    匹配事件消息的子字符串。
+      -->
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <!-- 控制输出日志的级别范围 -->
+        <param name="LevelMin" value="Info"/>
+        <param name="LevelMax" value="Error"/>
+      </filter>
+    </appender>
+
+    <appender name="ErrorAppender" type="log4net.Appender.RollingFileAppender,log4net" >
       <param name="File" value="./Log/Error" />
       <param name="AppendToFile" value="true" />
       <param name="RollingStyle" value="Date" />
       <param name="DatePattern" value="'.'yyyy-MM-dd'.log'" />
-      <param name="StaticLogFileName" value="true" />
+      <param name="StaticLogFileName" value="false" />
       <layout type="log4net.Layout.PatternLayout,log4net">
         <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
         <param name="Header" value="&#13;&#10;----------------------  header  --------------------------&#13;&#10;" />
         <param name="Footer" value="&#13;&#10;----------------------  footer  --------------------------&#13;&#10;" />
       </layout>
-    </appender> 
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <param name="LevelMin" value="WARN" />
+        <param name="LevelMax" value="FATAL" />
+      </filter>
+    </appender>
     
     <root>
       <level value="INFO"></level>
