--- a/TradingMaster/app.config
+++ b/TradingMaster/app.config
@@ -1,60 +1,63 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="TradingMaster.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
-    </configSections>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="TradingMaster.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
+  </configSections>
 
-    <userSettings>
-        <TradingMaster.Properties.Settings>
-            <setting name="ConfirmBeforeSendNewOrder" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ConfirmBeforeCancelOrder" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ConfirmForOrderSubmit" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ConfirmForOrderTransact" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="ConfirmForOrderCancel" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="HideCancelButton" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="CancelOrderByDoubleClick" serializeAs="String">
-                <value>True</value>
-            </setting>
-            <setting name="SplitLargeOrderHandCount" serializeAs="String">
-                <value>False</value>
-            </setting>
-        </TradingMaster.Properties.Settings>
-    </userSettings>
-
-
+  <userSettings>
+    <TradingMaster.Properties.Settings>
+      <setting name="ConfirmBeforeSendNewOrder" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ConfirmBeforeCancelOrder" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ConfirmForOrderSubmit" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ConfirmForOrderTransact" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ConfirmForOrderCancel" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="HideCancelButton" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CancelOrderByDoubleClick" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="SplitLargeOrderHandCount" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </TradingMaster.Properties.Settings>
+  </userSettings>
+  <appSettings>
+    <add key="UserProductInfo" value="IPTM_1.0" />
+    <add key="AppID" value="client_IPTM_1.0" />
+    <add key="AuthCode" value="6GY1R57NPCT6ODUR" />
+  </appSettings>
   <log4net>
-     <appender  name="LogInfoAppender" type="log4net.Appender.RollingFileAppender,log4net" >
+    <appender  name="LogInfoAppender" type="log4net.Appender.RollingFileAppender,log4net" >
       <param name="File" value="./Log/Info" />
       <param name="AppendToFile" value="true" />
       <param name="RollingStyle" value="Date" />
       <param name="DatePattern" value="'.'yyyy-MM-dd'.log'" />
       <param name="StaticLogFileName" value="false" />
       <layout type="log4net.Layout.PatternLayout,log4net">
-        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="ConversionPattern" value="%d [%2t] %-5p %m%n" />
         <param name="Header" value="&#13;&#10;----------------------  header  --------------------------&#13;&#10;" />
         <param name="Footer" value="&#13;&#10;----------------------  footer  --------------------------&#13;&#10;" />
       </layout>
-    </appender> 
-      
+    </appender>
+
     <appender name="DebugAppender" type="log4net.Appender.ConsoleAppender">
       <file value="./Log/Debug.log"></file>
       <layout type="log4net.Layout.PatternLayout,log4net">
-        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="ConversionPattern" value="%d [%2t] %-5p %m%n" />
         <param name="Header" value="&#13;&#10;----------------------  header  --------------------------&#13;&#10;" />
         <param name="Footer" value="&#13;&#10;----------------------  footer  --------------------------&#13;&#10;" />
       </layout>
@@ -100,7 +103,7 @@
       <param name="DatePattern" value="'.'yyyy-MM-dd'.log'" />
       <param name="StaticLogFileName" value="false" />
       <layout type="log4net.Layout.PatternLayout,log4net">
-        <param name="ConversionPattern" value="%d [%t] %-5p %c - %m%n" />
+        <param name="ConversionPattern" value="%d [%2t] %-5p %m%n" />
         <param name="Header" value="&#13;&#10;----------------------  header  --------------------------&#13;&#10;" />
         <param name="Footer" value="&#13;&#10;----------------------  footer  --------------------------&#13;&#10;" />
       </layout>
@@ -109,7 +112,7 @@
         <param name="LevelMax" value="FATAL" />
       </filter>
     </appender>
-    
+
     <root>
       <level value="INFO"></level>
       <appender-ref ref="LogInfoAppender"></appender-ref>
